# Melissa

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.lock.txt  preinstall.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1.bug_plugin.yaml  2.bug_core.yml  3.feature_request.yml  4.feature_change.yml
.github/workflows/: build-image-staging.yml  release.yml  run-test.yml
Guides/: Attributions.md  Create_Plugins.md
Melissa/: __init__.py  __main__.py  action.py  command.py  error.py  filters.py  listener.py  main.py  plugin.py
Melissa/core/: Melissa_bot.py  Melissa_mixin_base.py  __init__.py  command_dispatcher.py  database_provider.py  event_dispatcher.py  metrics.py  plugin_extenter.py  sqlite_storage.py  telegram_bot.py
Melissa/custom_plugins/: example.py
Melissa/internal_plugins/: __init__.py  canonical.py  spam_prediction.py
Melissa/language/: __init__.py  en.yml  hmr.yml  id.yml  kuki.yml  mz.yml
Melissa/plugins/: admins.py  backups.py  debug.py  federation.py  filters.py  language.py  lockings.py  main.py  misc.py  muting.py  notes.py  purge.py  reporting.py  restriction.py  rules.py  spam_shield.py  staff_tools.py  stats.py  topic.py  users.py  welcome.py
Melissa/util/: __init__.py  async_helper.py  config.py  converter.py  error.py  misc.py  system.py  tg.py  time.py  types.py
Melissa/util/db/: __init__.py  base.py  change_stream.py  client.py  client_session.py  collection.py  command_cursor.py  cursor.py  cursor_base.py  db.py  errors.py  typings.py
test/: __init__.py  test_base_converter.py  test_tg.py
