[tool.poetry]
name = "Melissa"
version = "2.13.15"
description = "Telegram group management bot"
license = "GPL-3.0-or-later"
authors = [
    "Nicky Lalrochhara <nickylalrochhara917@gmail.com>",
    "Famhawite Infosys <famhawiteinfosys@gmail.com>>",
]
readme = "README.md"
homepage = "https://famhawiteinfosys.github.io/melissa"
repository = "https://github.com/userbotindo/melissa"
documentation = "https://famhawiteinfosys.github.io/melissa/docs/home"
keywords = ["chatbot", "bot", "python", "telegram-bot", "pyrogram"]
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
]

[tool.poetry.scripts]
Melissa = "Melissa.main:start"

[tool.poetry.dependencies]
python = "~=3.9"
aiohttp = "^3.9.1"
aiopath = [
    { version = "^0.5.12", python = "<3.10" },
    { version = "^0.6.11", python = ">=3.10" },
]
aiorun = ">=2022.11.1,<2024.0.0"
certifi = { version = ">=2022.12.7,<2024.0.0", platform = "windows" }
colorlog = "^6.8.0"
frozenlist = "^1.3.3"
meval = "^2.5"
multidict = "^6.0.4"
pymongo = "^4.6.1"
pyrofork = "^2.3.15"
python-dotenv = ">=0.21.1,<1.1.0"
PyYAML = "^6.0"
TgCrypto = "^1.2.5"
typing-extensions = "^4.5.0"
uvloop = { version = ">=0.17,<0.20", optional = true, platform = "linux" }
yarl = "^1.9.3"
aiocache = "^0.12.0"

[tool.poetry.extras]
all = ["uvloop"]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
isort = "^5.12.0"
pre-commit = ">=2.21,<4.0"
pylint = ">=2.16.2,<4.0.0"
flake8 = ">=5.0.4,<7.0.0"
pytest = "^7.2.1"
pytest-asyncio = ">=0.20.2,<0.24.0"

#
# Black config
#
[tool.black]
line-length = 100
target-version = ["py38"]

#
# Isort Config
#
[tool.isort]
profile = "black"
known_third_party = [
    "aiohttp",
    "aiopath",
    "aiorun",
    "colorlog",
    "dotenv",
    "pymongo",
    "pyrogram",
    "scikit-learn",
    "yaml",
]

#
# Pylint Config
#
[tool.pylint]
ignore = "Melissa/util/db"

[tool.pylint.messages_control]
disable = [
    "attribute-defined-outside-init",
    "too-few-public-methods",
    "missing-class-docstring",
    "logging-fstring-interpolation",
    "missing-function-docstring",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 15

# Semantic Release Config
[tool.semantic_release]
version_variable = "Melissa/__init__.py:__version__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
